exciting web portfolio

--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
         <div class="half-width">
             <h1>HELLO I'M</h1>
             <h1><span class="name-highlight">SADIM HAYDER</span></h1>
-            <h3>A full stack allaround designer that placerat</h3>
-            <h3>in massa consectetur</h3>
+            <h4>A full stack allaround designer that placerat in massa consectetur</h4>
             <a class="link-button" target="blank" href="https://www.linkedin.com/in/sadim-hayder-khan-patan-7219631a0/">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="images/sadim.png" alt="">
+            <img src="images/sadim1.png" alt="">
 
         </div>
     </section>
@@ -33,19 +32,19 @@
         </div>
         <div class="half-width">
             <h1>ABOUT</h1>
-            <h3>Lorem Ipsum is simply dummy text of the printing and
+            <h4>Lorem Ipsum is simply dummy text of the printing and
                 typesetting industry. Lorem Ipsum has been the industry's
                 standard dummy text ever since the 1500s, when an unknown
                 printer took a galley of type and scrambled it to make a type
-                specimen book.</h3>
+                specimen book.</h4>
                 <a class="link-button" target="blank" href="https://www.linkedin.com/in/sadim-hayder-khan-patan-7219631a0/">DOWNLOAD CV</a>
 
         </div>
     </section>
     <section class="LASTET WORKING PROJECT">
         <h1 id="go">LASTET WORKING PROJECT</h1>
-        <div half-width>
-            <img src="images/image 4.png" alt="">
+        <div>
+        <img src="images/image 4.png" alt="">
             <h3>Power-x-gym (gym website)</h3>
             <p>Lorem Ipsum is simply dummy text of the 
             printing and typesetting industry.</p>
