exciting web portfolio

--- a/index.html
+++ b/index.html
@@ -42,12 +42,18 @@
         </div>
     </section>
     <section class="LASTET WORKING PROJECT">
-        <h1 id="go">LASTET WORKING PROJECT</h1>
-        <div>
+        <h1> <span class="name-highlight">LASTET</span> WORKING PROJECT</h1>
+        <div class="half-width">
         <img src="images/image 4.png" alt="">
             <h3>Power-x-gym (gym website)</h3>
             <p>Lorem Ipsum is simply dummy text of the 
             printing and typesetting industry.</p>
+
+        </div>
+        <div class="half-width">
+            <img src="images/image 5.png" alt="">
+            <h3>Creative Agency</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
 
         </div>
     </section>
